[package]
name = "mirrorman"
version = "0.4.0"
edition = "2021"
description = "Media conversion and mirror tool"
readme = "README.md"
homepage = "https://github.com/LennyPhoenix/mirrorman"
repository = "https://github.com/LennyPhoenix/mirrorman"
license-file = "LICENSE"
keywords = ["mirror", "sync", "convert"]
authors = ["Lenny Critchley <LennyPhoenixC@gmail.com>"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base32 = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
walkdir = "2.5.0"
